Added Theme and New Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BasicDiTest</string>
+    <string name="new_screen_title">New Screen</string>
 </resources>
